--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,11 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+    <nav class="navbar">
+      <a class="navbar-brand">
+        <%= link_to 'Home', root_path %>
+      </a>
+    </nav>
 
   <body>
     <%= yield %>
