Address and Address_listing models created, associations for listings, address, and listing_address

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
       <a class="navbar-brand">
         <%= link_to 'Home', root_path %>
       </a>
+        <%= link_to 'New Listing', new_listing_path %>
     </nav>
 
   <body>
