Listing show page shows address

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,2 +1,10 @@
 <h1><%= @listing.name %></h1><br>
 <h2><%= @listing.description %></h2>
+
+<%= @listing.address.line1 %><br>
+<%= @listing.address.line2 %><br>
+<%= @listing.address.city %><br>
+<%= @listing.address.state %><br>
+<%= @listing.address.zipCode %>
+
+
