--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,26 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-    <nav class="navbar">
-      <a class="navbar-brand">
-        <%= link_to 'Home', root_path %>
-      </a>
-        <%= link_to 'New Listing', new_listing_path %>
+  <body>
+    <nav class="navbar navbar-default">
+    <div class="container">
+    <div class="navbar-header">
+      <%= link_to "AirDnC", root_path, class: "navbar-brand" %>
+    </div>
+    <ul class="nav navbar-nav navbar-right">
+      <li><%= link_to "Sign Up", new_user_registration_path %></li>
+      <% if user_signed_in? %>
+        <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+      <% else %>	
+        <li><%= link_to "Log In", new_user_session_path %></li>
+      <% end %>
+    </ul>
+    </div>
     </nav>
 
-  <body>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
     <%= yield %>
   </body>
 </html>
