User Listing associations, clean up navbar layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,24 +10,26 @@
   </head>
   <body>
     <nav class="navbar navbar-default">
-    <div class="container">
-    <div class="navbar-header">
-      <%= link_to "AirDnC", root_path, class: "navbar-brand" %>
-    </div>
-    <ul class="nav navbar-nav navbar-right">
-      <% if user_signed_in? %>
-        <li><%= link_to "user", user_path(current_user) %></li>
-        <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
-      <% else %>
-        <li><%= link_to "Sign Up", new_user_registration_path %></li>
-        <li><%= link_to "Log In", new_user_session_path %></li>
-      <% end %>
-    </ul>
+      <div class="container">
+        <div class="navbar-header">
+          <%= link_to "AirDnC", root_path, class: "navbar-brand" %>
+        </div>
+        <ul class="nav navbar-nav navbar-right">
+        <% if user_signed_in? %>
+          <li><%= link_to "New Listing", new_user_listing_path(current_user) %></li>
+          <li><%= link_to current_user.email.capitalize, user_path(current_user) %></li>
+          <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to "Sign Up", new_user_registration_path %></li>
+          <li><%= link_to "Log In", new_user_session_path %></li>
+        <% end %>
+        </ul>
     </div>
     </nav>
-
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <div class="container">
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+    </div>
 
     <%= yield %>
   </body>
