--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,9 +1,5 @@
-<div class="container">
-  <h1>Listings Index</h1>
+<h1>Listings</h1>
 
-  <% @listings.each do |listing| %>
-    <strong><%= link_to listing.name, listing_path(listing) %></strong><br>
-    <%= link_to 'Edit', edit_listing_path(listing) %>
-    <%= link_to 'Delete', listing_path(listing), method: :delete, data: { confirm: "Are you sure?" } %><br>
-  <% end %>
-</div>
+<% @listings.each do |listing| %>
+  <strong><%= link_to listing.name, listing_path(listing) %></strong><br>
+<% end %>
