--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,8 @@
-<%= @user.email %>
+<h1>Your Listings</h1>
+<% @current_user.listings.each do |listing| %>
+  <strong><%= listing.name %></strong><br>
+  <ul>
+    <%= link_to 'Edit', edit_user_listing_path(current_user, listing) %>
+    <%= link_to 'Delete', listing_path(listing), method: :delete, data: { confirm: "Are you sure?" } %>
+  </ul><br>
+<% end %>
