Fix listing show route conditional for edit and delete links

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -7,7 +7,7 @@
 <%= @listing.address.state %><br>
 <%= @listing.address.zipCode %><br>
 
-<% if current_user = @listing.user %>
+<% if current_user.id == @listing.user_id %>
   <%= link_to 'Edit', edit_user_listing_path(current_user, @listing) %>
   <%= link_to 'Delete', listing_path(@listing), method: :delete, data: { confirm: "Are you sure?" } %>
 <% end %>
