--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -8,7 +8,7 @@
 <%= @listing.address.state %><br>
 <%= @listing.address.zipCode %><br>
 
-<% if current_user == @listing.host %>
+<% if current_user == @listing.user %>
   <%= link_to 'Edit', edit_user_listing_path(current_user, @listing) %>
   <%= link_to 'Delete', listing_path(@listing), method: :delete, data: { confirm: "Are you sure?" } %>
 <% end %>
