--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @profile do |f| %>
+<%= form_for @profile, :html => { :multipart => true }  do |f| %>
   <%= f.label :greeting %>
   <%= f.text_field :greeting %><br>  
   <%= f.label :about_me %>
