--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -15,6 +15,8 @@
       <%= a.label :zipCode, "Zip" %>
       <%= a.text_field :zipCode %><br>
     <% end %>
+  <%= f.label :price %>
+  <%= f.text_field :price %><br>
   <%= f.label :image %>
   <%= f.file_field :listingimage %><br>
   <%= f.submit 'Submit' %>
