--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -17,6 +17,7 @@ $<%= @listing.price %> per booking <br>
 
   <%= form_for([@listing, @listing.bookings.new]) do |f| %>
   <%= f.hidden_field :listing_id, value: @listing.id %>
+  <%= f.hidden_field :price, value: @listing.price %>
   <%= f.submit "Book Now", class: "btn btn-normal btn-block" %>
   <% end %>
 <% end %>
