Users have many guests has many through association

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -40,3 +40,8 @@
 <% @user.bookings.each do |booking| %>
 <%= image_tag booking.listing.listingimage.url(:thumb) %>
 <% end %>
+
+<h3>Your Guests</h3>
+<% @user.guests.each do |guest| %>
+<%= guest.user.username %>
+<% end %>
